# rts

./: .gitignore  .gitmodules  build_104.sh  build_Sim.sh  build_demo.sh  build_headless.sh  build_streflop.sh  engineSim.idl  my_glue_wrapper.cpp
17_10_spring/spring-develop/files/: Err101.bc  Feat.bc  atomic.bc  chrono.bc  container.bc  context.bc  coroutine.bc  date_time.bc  exception.bc  fiber.bc  filesystem.bc  iostreams.bc  math_c99.bc  math_c99f.bc  math_c99l.bc  prg_exec_monitor.bc  random.bc  signals.bc  system.bc  thread.bc  timer.bc  type_erasure.bc
17_10_spring/spring-develop/files/Game/: Game.cpp  Game.cpp~RF25b13294.TMP  Game.cpp~RF2b94fbdd.TMP  Game.h  GameVersion.cpp
17_10_spring/spring-develop/files/System/: MainDefines.h  Object.h  VersionGenerated.h
17_10_spring/spring-develop/rts/: Files2.txt  GlobalRNG_mock.cpp  SafeUtil_mock.cpp  al.h  inffixed_mock.cpp  system_error.cpp  zconf_mock.cpp
17_10_spring/spring-develop/rts/ExternalAI/: AICallback_stub.cpp  AICheats_generated.cpp  AICheats_mock.cpp  AICheats_stub.cpp  AIInterfaceKey_stub.cpp  AIInterfaceLibraryInfo_mock.cpp  AIInterfaceLibraryInfo_stub.cpp  AIInterfaceLibrary_mock.cpp  AIInterfaceLibrary_stub.cpp  AILegacySupport_mock.cpp  AILibraryManager_mock.cpp  AILibraryManager_stub.cpp  AISCommands_stub.cpp  EngineOutHandler_stub.cpp  IAILibraryManager_mock.cpp  IAILibraryManager_stub.cpp  LuaAIImplHandler_mock.cpp  LuaAIImplHandler_stub.cpp  SAIInterfaceCallbackImpl_stub.cpp  SSkirmishAICallbackImpl_generated.cpp  SSkirmishAICallbackImpl_stub.cpp  SkirmishAIData_generated.cpp  SkirmishAIData_stub.cpp  SkirmishAIHandler_stub.cpp  SkirmishAIKey_stub.cpp  SkirmishAILibraryInfo_mock.cpp  SkirmishAILibraryInfo_stub.cpp  SkirmishAILibrary_mock.cpp  SkirmishAILibrary_stub.cpp  SkirmishAIWrapper_stub.cpp
17_10_spring/spring-develop/rts/Game/: Action_mock.cpp  Action_stub.cpp  AviVideoCapturing_mock.cpp  AviVideoCapturing_stub.cpp  Benchmark_generated.cpp  Benchmark_mock.cpp  Benchmark_stub.cpp  CameraHandler_stub.cpp  Camera_stub.cpp  ChatMessage_mock.cpp  ChatMessage_stub.cpp  ClientData_mock.cpp  ClientSetup_mock.cpp  ClientSetup_stub.cpp  CommandMessage_generated.cpp  CommandMessage_mock.cpp  CommandMessage_stub.cpp  ConsoleHistory_mock.cpp  ConsoleHistory_stub.cpp  Console_stub.cpp  DummyVideoCapturing_mock.cpp  DummyVideoCapturing_stub.cpp  FPSUnitController_mock.cpp  FPSUnitController_stub.cpp  Game.cpp~RF2b6f8337.TMP  GameController_mock.cpp  GameController_stub.cpp  GameData_mock.cpp  GameData_stub.cpp  GameHelper_stub.cpp  GameJobDispatcher_mock.cpp  GameSetup_stub.cpp  GameVersion_mock.cpp  GameVersion_stub.cpp  Game_stub.cpp  GlobalUnsynced_stub.cpp  IActionExecutor_mock.cpp  IGameCommands_mock.cpp  IVideoCapturing_generated.cpp  IVideoCapturing_mock.cpp  (+28 more)
17_10_spring/spring-develop/rts/Lua/: LuaArchive_mock.cpp  LuaArchive_stub.cpp  LuaBitOps_mock.cpp  LuaBitOps_stub.cpp  LuaCallInCheck_mock.cpp  LuaConfig_mock.cpp  LuaConstCMDTYPE_mock.cpp  LuaConstCMDTYPE_stub.cpp  LuaConstCMD_generated.cpp  LuaConstCMD_mock.cpp  LuaConstCMD_stub.cpp  LuaConstCOB_generated.cpp  LuaConstCOB_mock.cpp  LuaConstCOB_stub.cpp  LuaConstEngine_mock.cpp  LuaConstGL_generated.cpp  LuaConstGL_mock.cpp  LuaConstGL_stub.cpp  LuaConstGame_mock.cpp  LuaConstGame_stub.cpp  LuaConstPlatform_mock.cpp  LuaContextData_mock.cpp  LuaDefs_mock.cpp  LuaDisplayLists_mock.cpp  LuaFBOs_mock.cpp  LuaFBOs_stub.cpp  LuaFeatureDefs_mock.cpp  LuaFeatureDefs_stub.cpp  LuaFonts_mock.cpp  LuaFonts_stub.cpp  LuaGaia_mock.cpp  (+80 more)
17_10_spring/tools/: .clang-format  generate_stub.sh
bindings/: engineSim.idl  gameConfig.tdf  testConstructorCallSuccess.js  testTeamHandler.js
bindings/CGameSetupIDL_test/: GameSetup_IDL.idl  glue.cpp  glue.js  my_glue.cpp
bindings/code-generator/: build.sh
bindings/code-generator/src/: TdfParser.h  clang-test.js  combined.h  combined_result.h  emscripten_gen.py  textcomponent.h
bindings/python-bindings-generator/: Pipfile  README.md  build.sh  tasks.txt
bindings/python-bindings-generator/src/: Api.json  CodeDependencyVisualizer.py  CppToIdlTypeConverter.py  WebIdlGenerator.py  bind.mako  bind_glue_wrapper.mako  bind_idl.mako  dump_ast.py  emscripten_gen.py
bindings/testTeamHandler/: TeamHandler_IDL.idl  testTeamHandler.js
lib/: maintance.sdfz
lib/SDL2_build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
lib/chronotext-boost/: build-emscripten.sh
lib/cmakeTest/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/libunwind-1.2/: Makefile  a.out  config.status  libtool
lib/libunwind-1.2/include/: config.h  libunwind.h
lib/libunwind-1.2/src/: Makefile
lib/libunwind-1.2/tests/: Makefile  check-namespace.sh
libengine-engine-dedicated2/: build_dedicated2.sh  engineSim.idl  my_glue_wrapper.cpp
libengineSim/: engineSim.js  libengineSim.js
libenginededicated/: build dedicated.txt  spring-dedicated.js
spring-104.0.1/: .gitmodules  CMakeLists.txt  VERSION  spring-dedicated2.js.mem
spring-104.0.1/rts/: CMakeLists.txt  execinfo.h
spring-104.0.1/rts/Lua/: LuaVFSDownload.cpp
spring-104.0.1/rts/System/: CMakeLists.txt  MainDefines.h  Makefile  SpringHashMap.hpp  SpringHashSet.hpp  VersionGenerated.h  cmake_install.cmake
spring-104.0.1/rts/builds/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
spring-104.0.1/rts/builds/dedicated2/: CMakeLists.txt  CMakeLists.txt.save  Makefile  cmake_install.cmake
spring-104.0.1/rts/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
spring-104.0.1/tools/DemoTool/: CMakeLists.txt  DemoTool.cpp  demotool
spring-104.0.1/tools/DemoTool/gflags/: Makefile  cmake_install.cmake  gflags-targets.cmake
spring-104.0.1/tools/DemoTool/gflags/include/gflags/: mutex.h
spring-104.0.1/tools/DemoTool/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
spring-104.0.1/tools/pr-downloader/: CTestTestfile.cmake  Makefile  cmake_install.cmake
spring_103.0/: CMakeLists.txt  build.sh
spring_103.0/rts/: CMakeLists.txt
spring_103.0/rts/builds/: CMakeLists.txt
tools/: generate_mock.sh  generate_stub.sh
(+3514 files in other folders)
